clusters/homelab/apps/paperless/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
  labels:
    gateway.infra.services/allow-routes: "true"
