clusters/homelab/apps/paperless/paperless-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: paperless
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless-server
      app.kubernetes.io/instance: paperless
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless-server
        app.kubernetes.io/instance: paperless
    spec:
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:3.3.0
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /
              port: 8000
            periodSeconds: 10
            failureThreshold: 18
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "2"
              memory: 4Gi
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: data
            - mountPath: /usr/src/paperless/media
              name: media
            - mountPath: /usr/src/paperless/consume
              name: consume
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-data
        - name: media
          persistentVolumeClaim:
            claimName: paperless-media
        - name: consume
          persistentVolumeClaim:
            claimName: paperless-consume
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-server
  namespace: paperless
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: paperless-server
    app.kubernetes.io/instance: paperless
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
