clusters/homelab/apps/paperless/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  namespace: paperless
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: [
    "paperless.klimlive.de"
  ]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: paperless-server
          port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ai
  namespace: paperless
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: [
    "paperless-ai.klimlive.de"
  ]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: paperless-ai
          port: 3000
